# voice-synced-display

./: .gitignore  .python-version  Dockerfile  MODEL_MANAGEMENT.md  README.md  app.py  cache_config.json  dev.py  download_whisper_models.py  minimal_ws_test.py  pyproject.toml  requirements.txt  run.py  set_cache_dir.py  test_models.py
data/: keywords.csv  script_en.txt  script_translated.txt
templates/: admin.html  display.html
